[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Images/Composition/Taguatinga/3-Taguatinga (não-finalizado).png" type="Texture" id=1]
[ext_resource path="res://assets/Images/Composition/Taguatinga/multidão.png" type="Texture" id=2]
[ext_resource path="res://assets/Images/Composition/Taguatinga/raulino_perfil.png" type="Texture" id=3]
[ext_resource path="res://scenes/AuxScenes/ChatBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Images/Composition/Darcy/multidão.png" type="Texture" id=5]
[ext_resource path="res://assets/Images/Composition/Taguatinga/raulino_resize25.png" type="Texture" id=6]
[ext_resource path="res://assets/Images/Composition/Jogador/JOGADOR.png" type="Texture" id=7]
[ext_resource path="res://scenes/dialogs/investigação_taguatinga/Raulino.gd" type="Script" id=8]
[ext_resource path="res://scenes/AuxScenes/PlayerBackPack.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Styles/Themes/CharacterChoice.tres" type="Theme" id=10]
[ext_resource path="res://entities/Player.tscn" type="PackedScene" id=11]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 11 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 744.8, 165 )
scale = Vector2( 1.44828, 1.44828 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Sprite"]
position = Vector2( 0.352417, 53.5924 )
scale = Vector2( 1.00173, 1.00173 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 461, 380 )
scale = Vector2( 1.29625, 1.29625 )
texture = ExtResource( 6 )

[node name="ChatBox" parent="." instance=ExtResource( 4 )]
margin_left = -58.0
margin_top = 132.0
margin_right = 38.0
margin_bottom = 180.0
chat = "*P* tarde, meu senhor. Você é quem está no comando do movimento?
*R* Sim, e estamos aqui em busca dos nossos direitos,jovem. “É pão ou morte”.
*M* PÃO OU MORTE! PÃO OU MORTE!” “PÃO OU MORTE!”)  
*P*Estou tentando compreender o que está acontecendo por aqui, já conversei com o senhor chefe de polícia e um jornalista que está em busca do senhor e de mais dois indivíduos. 
*R*Pois eu vou lhe contar o absurdo que estão fazendo com a gente. Estamos aqui há 3 dias reivindicando nossos direitos e esses senhores só prometem botar a gente pra trabalhar, mas não cumprem, estamos com fome, sem emprego e sem moradia.  
*P*Então, todo mundo aqui está desempregado?
*R*Também tem desempregados. O movimento se chama “Turma da boa vontade” porque tem gente trabalhando sem receber. Está todo mundo em busca de alimentação e um salário que pague nossas contas. Ninguém passa, nem bicicleta, nem gente, nem ônibus até conseguirmos nossos direitos! É PÃO OU MORTE! 
*P*Que absurdo, senhor Raulino. Então está explicado a revolta dos seus colegas da boa vontade... quer dizer... turma da boa vontade. Certo? 
*R*Isso mesmo. Vamos quebrar tudo se não pagarem a gente! E quem é você? Quer se unir à nossa causa? 
*P*Eu sou historiador(a), estou apenas tentando compreender melhor o que está acontecendo aqui, senhor Raulino. 
*R*Certo. Vou lhe mostrar então meu caderninho de contas e a merreca que recebem os trabalhadores, porque eu nem isso estou recebendo mais, estou desempregado, e minha família está sem alimentação."
img = [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 5 ) ]
cha = [ "P", "R", "M" ]
image_scales = [ Vector2( 0.05, 0.05 ), Vector2( 0.65, 0.65 ), Vector2( 0.13, 0.13 ) ]
nam = [ "Historiadora", "Raulino", "Multidão" ]
resize_panel = [ Vector2( 113, 26 ), Vector2( 90, 26 ), Vector2( 113, 26 ) ]

[node name="PlayerBackPack" parent="." instance=ExtResource( 9 )]

[node name="UnlockedSkill" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -287.0
margin_right = 475.0
margin_bottom = -125.0
rect_scale = Vector2( 0.785714, 0.785714 )
theme = ExtResource( 10 )

[node name="Label" type="Label" parent="UnlockedSkill"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.627
anchor_bottom = 0.5
margin_left = -237.818
margin_top = -91.1818
margin_right = 185.079
margin_bottom = 91.8182
custom_colors/font_color = Color( 0.196078, 0.282353, 0.376471, 0.670588 )
text = "Parabéns! Foi desbloqueada a Habilidade capacidade investigativa."
align = 1
valign = 1
autowrap = true

[node name="PlayerBackPack2" parent="." instance=ExtResource( 9 )]

[connection signal="end_dialog" from="ChatBox" to="." method="_on_ChatBox_end_dialog"]
